--- a/index.html
+++ b/index.html
@@ -45,24 +45,37 @@
                 <option value="18">18</option>
                 <option value="20">20</option>
             </select>
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined bold">
                 format_bold
             </span>
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined italic">
                 format_italic
             </span>
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined underline">
                 format_underlined
             </span>
-            <span class="material-symbols-outlined">
+            <span class="left material-symbols-outlined alignment">
                 format_align_left
             </span>
-            <span class="material-symbols-outlined">
+            <span class="center material-symbols-outlined alignment">
                 format_align_center
             </span>
-            <span class="material-symbols-outlined">
+            <span class="right material-symbols-outlined alignment">
                 format_align_right
             </span>
+            
+            <div class="color-prop">
+                <span class="material-symbols-outlined">
+                    format_color_text
+                </span>
+                <input type="color" class="font-color-prop">
+            </div>
+            <div class="color-prop">
+                <span class="material-symbols-outlined">
+                    format_color_fill
+                </span>
+                <input type="color" class="BGcolor-prop">
+            </div>
         </div>
 
         <div class="formula-actions-cont">
@@ -72,7 +85,12 @@
         </div>
 
         <div class="grid-cont">
+            <div class="top-left-dummy"></div>
+            <div class="address-col-cont"></div>
+            <div class="cells-cont">
+                <div class="address-row-cont"></div>
 
+            </div>
         </div>
 
         <div class="sheet-actions-cont">
@@ -89,6 +107,7 @@
             </div>
         </div>
         
-        <script src="./script.js"></script>
+        <script src="./grid.js"></script>
+        <script src="./cell-prop.js"></script>
     </body>
 </html>
