--- a/index.html
+++ b/index.html
@@ -109,5 +109,6 @@
         
         <script src="./grid.js"></script>
         <script src="./cell-prop.js"></script>
+        <script src="./formula.js"></script>
     </body>
 </html>
